[package]
name = "incipio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.11"
heapless = "0.7.16"
nix = { version = "0.26.1", features = ["process"] }
thiserror = "1.0.38"
# phf = { version = "0.11.1", default-features = false, features = ["macros"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
