[package]
name = "incipio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.11"
libc-print = "0.1.20"
# heapless = "0.7.16"
nix = { version = "0.26.1", features = ["process", "fs", "mman"] }

[build-dependencies]
fastrand = "1.8.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
